--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                 <br/>I worked on a syntactic coding project doing data cleaning and advanced preprocessing in 2022.</li>
                 <li><b>Research Assistant Roles - Manual Coding</b>
                   <br/>
-                <br/>I started working on a project investigating language testing data. For this project, I carried out manual pragmatic coding.</li>
+                <br/>I started working on a project investigating language testing data in the <a href="http://www.research.lancs.ac.uk/portal/en/upmprojects/construction-and-corpusbased-analysis-of-the-british-councillancaster-university-aptis-corpus(3ace9bdf-2dd1-4f72-b9d0-530670fcc2f7).html" target="_blank">APTIS corpus</a>, a corpus compiled in collaboration with the <a href="https://www.britishcouncil.org/" target="_blank">British Council</a>. For this project, I carried out manual pragmatic coding.</li>
                  <li><b>Research Assistant Roles - Data Processing</b>
                   <br/>
-                <br/>I worked on L2 language proficiency test data, mainly data processing, formatting and statistical analyses of epistemic markers.</li>
+                <br/>I worked on L2 language proficiency test data, also from the  <a href="http://www.research.lancs.ac.uk/portal/en/upmprojects/construction-and-corpusbased-analysis-of-the-british-councillancaster-university-aptis-corpus(3ace9bdf-2dd1-4f72-b9d0-530670fcc2f7).html" target="_blank">APTIS corpus</a>, mainly data processing, formatting and statistical analyses of epistemic markers.</li>
                  <li><b>Research Assistant Roles - LANA Corpus Processing</b>
                   <br/>
                 <br/>I currently work on the the Lancaster-Northern Arizona Corpus of American English <a href="https://twitter.com/LANA_corpus" target="_blank">(LANA) </a> project in collaboration with colleagues at ASU.</li>
