--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
                <span class="image right"><img src="images/fulls/MOOC.jpg" alt="" /></span>
                   <li><b>Mentoring - Methods North West</b>
                   <br/>
-                <br/>I am currently working as a mentor for reserach students as part of a  <a href="https://twitter.com/MethodsNW/status/1569264899808972800" target="_blank">Methods NW project</a> enabling interdisciplinary and interinstitutional research collaborations. My role involves advising the researcher in methodological matters with regards to corpus linguistics. 
+                <br/>I was working as a mentor for reserach students as part of a  <a href="https://twitter.com/MethodsNW/status/1569264899808972800" target="_blank">Methods NW project</a> enabling interdisciplinary and interinstitutional research collaborations. My role involves advising the researcher in methodological matters with regards to corpus linguistics. 
                 <li>
+    <li><b>Mentoring - Coding Sessions</b>
+                  <br/>
+                <br/>I am currently working as a mentor teaching other academics programming skills (R/Python). In this role, I design a curriculum around the researchers' individual project aims, set challenges, and cooperate with them to find efficient, robust, interpretable, and easily replicable solutions.
+
                   <b>Teaching and Technical Assistance - Summer Schools in Corpus Linguistics</b>
                   <br/>
                 <br/>I have been helping with the <a href="http://wp.lancs.ac.uk/corpussummerschools/" target="_blank">Lancaster Summer Schools in Corpus Linguistics</a> L since 2020. This has involved both teaching Q&A sessions as well as helping with the technology behind the scenes (setting up and recording Teams live events, monitoring the chat, operating the presentations etc.).</li>
