--- a/publications.html
+++ b/publications.html
@@ -38,12 +38,14 @@
           <br/>
             <h2>Journal Articles</h2>
           <li>Jung, Y; Gablasova, D; Brezina, V; Schmück, H. Annotating evaluative meanings in the Trinity Lancaster Corpus. “Innovations in the compilation and analysis of spoken corpora". Research in Corpus Linguistics. ISSN: 2243-4712. [under review]
+          <li>Schmueck, H. Review of Dunn, J. (2022): Natural Language Processing for Corpus Linguistics. International Journal of Corpus Linguistics. [under review] </li>
           </section>
+        
 
         <section id="two">
           <h2>In prep</h2>
-          <li>Schmueck, Hanna & Malone, Daniel. A pack of lone wolves: An analysis of lone wolf terrorism discourses in the British Press. In prep - planned for submission to Research Methods in Applied Linguistics.
-          <li>Schmueck, Hanna & Brezina, Vaclav. Collocations in More context: Large and small-scale approaches to linguistic networks. In prep - planned for submission to International Journal of Corpus Linguistics.
+          <li>Schmueck, H & Malone, D. A pack of lone wolves: An analysis of lone wolf terrorism discourses in the British Press. In prep - planned for submission to Research Methods in Applied Linguistics.
+          <li>Schmueck, H & Brezina, V. Collocations in More context: Large and small-scale approaches to linguistic networks. In prep - planned for submission to International Journal of Corpus Linguistics.
           </section>
 
          
