--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             I'm a PhD student, research assistant and associate lecturer at Lancaster University.
             I greatly enjoy all things corpus linguistics, psycholinguistics, and data visualisation.
             The main aim of my work is to develop new, explainable methodologies and workflows so we can analyse (existing) linguistic data in new ways and further our understanding of language and the mind.
-            Have a look at my research/projects, learn more about me, or get in touch:
+            Have a look at my research/projects,  <a href="https://hannaschmueck.github.io/publications" target="_blank">publications</a>, learn more about me, or get in touch:
           </section>
 
           <h2>Projects and Experience at Lancaster University </h2>
