--- a/nodejsnetwork2.html
+++ b/nodejsnetwork2.html
@@ -2,32 +2,53 @@
   <style> body { margin: 0; } </style>
 
   <script src="//unpkg.com/three"></script>
-  <script src="//unpkg.com/three-spritetext"></script>
 
   <script src="//unpkg.com/3d-force-graph"></script>
-  <!--<script src="../../dist/3d-force-graph.js"></script>-->
+  
+<!--  <script src="../../dist/3d-force-graph.js"></script>-->
+
+  <style>
+    .node-label {
+      font-size: 10px;
+      padding: 1px 4px;
+      border-radius: 4px;
+      background-color: rgba(3, 3, 3, 0.7);
+      user-select: none;
+    }
+  </style>
 </head>
 
 <body>
   <div id="3d-graph"></div>
 
-  <script>
-    const Graph = ForceGraph3D()
-      (document.getElementById('3d-graph'))
-        .jsonUrl('../datasets/substance_abuse_logDice_673.json')
-        .nodeAutoColorBy('group')
-        .nodeThreeObject(node => {
-          const sprite = new SpriteText(node.id);
-          sprite.material.depthWrite = true; // make sprite background transparent
-          sprite.color = node.color;
-          sprite.textHeight = 12;
-          return sprite;})
-        .cooldownTicks(250)        
-        .linkDirectionalParticles("logDice")
-        .linkDirectionalParticleSpeed(d => Math.sqrt(d.logDice)*0.001)
-        .linkDirectionalParticleWidth(3)
-        .d3Force("link", d3.forceLink().strength(d => d.logDice*2))
-        ;
+  <script type="importmap">{ "imports": { "three": "https://unpkg.com/three/build/three.module.js" }}</script>
+  <script type="module">
+    import { CSS2DRenderer, CSS2DObject } from '//unpkg.com/three/examples/jsm/renderers/CSS2DRenderer.js';
+
+    const Graph = ForceGraph3D({
+      extraRenderers: [new CSS2DRenderer()]
+    })
+    (document.getElementById('3d-graph'))
+      .jsonUrl('../datasets/substance_abuse_logDice_673.json')
+      .nodeAutoColorBy('group')
+      .nodeVal('degree')
+      .nodeThreeObject(node => {
+        const nodeEl = document.createElement('div');
+        nodeEl.textContent = node.id;
+        nodeEl.style.color = node.color;
+        nodeEl.style.fontSize = "14px";
+        nodeEl.className = 'node-label';
+        return new CSS2DObject(nodeEl);
+      })
+      .nodeThreeObjectExtend(true)
+      .cooldownTicks(250)        
+      .linkDirectionalParticles("logDice")
+      .linkDirectionalParticleSpeed(d => Math.sqrt(d.logDice)*0.001)
+      .linkDirectionalParticleWidth(3)
+      .d3Force("link", d3.forceLink().strength(d => d.logDice*2))
+
+        
+    ;
 
   </script>
 </body>
